<resources>
    <string name="app_home_name">医生端</string>
    <string name="continues">继续</string>
    <string name="back">返回</string>
    <string name="check">核实</string>
    <string name="all">全部</string>
    <string name="edit">编辑</string>
    <string name="modify">修改</string>
    <string name="delete">删除</string>
    <string name="selected">选中</string>
    <string name="add">添加</string>
    <string name="added">已添加</string>
    <string name="finish">完成</string>
    <string name="save">保存</string>
    <string name="next">下一步</string>
    <string name="prompt">提示</string>
    <string name="sure">确定</string>
    <string name="know">知道了</string>
    <string name="knew">已知晓</string>
    <string name="agree">同意</string>
    <string name="agreed">已同意</string>
    <string name="invalid">已失效</string>
    <string name="refuse">拒绝</string>
    <string name="status">状态</string>
    <string name="refused">已拒绝</string>
    <string name="accepted">已接受</string>
    <string name="i_know">我知道了</string>
    <string name="call">呼叫</string>
    <string name="age">年龄</string>
    <string name="years">岁</string>
    <string name="other">其他</string>
    <string name="think_again">再想想</string>
    <string name="upload">上传</string>
    <string name="close">关闭</string>
    <string name="cancel">取消</string>
    <string name="history">历史</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="sex_all_right">不限性别</string>
    <string name="none">无</string>
    <string name="send">发送</string>
    <string name="not_send">不发送</string>
    <string name="hour">小时</string>
    <string name="min">分钟</string>
    <string name="goter">知道了</string>
    <string name="view_details">查看详情</string>
    <string name="view_verify">请您审核</string>
    <string name="urgent">紧急</string>
    <string name="commonly">一般</string>
    <string name="ordinary">普通</string>
    <string name="search">搜索</string>
    <string name="clear_history">清空历史搜索</string>
    <string name="history_search">历史搜索</string>
    <string name="reset">重置</string>
    <string name="welcome_login">欢迎登录</string>
    <string name="type">类型</string>
    <string name="more">更多</string>
    <string name="operator">操作</string>
    <string name="no_data">没有数据</string>
    <string name="doctor_advice_suggestion">医生提醒</string>
    <string name="app_heart_doctor">心之力-医生端</string>
    <string name="app_new_edition">已是最新版本</string>
    <string name="early_exit">提前退出</string>
    <string name="title_early_over">提前结束</string>
    <string name="tip_operator">操作人:&#160;&#160;&#160;&#160;</string>
    <string name="tip_operator_over_time">结束时间:&#160;&#160;&#160;&#160;</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_protocol_agreed">登录即代表阅读并同意</string>
    <string name="login_protocol_check">《用户协议及隐私条款》</string>
    <string name="login_status">请重新上传您的医师资质证明</string>
    <string name="login_status_fail">认证失败</string>
    <string name="user_un_register">该手机号未注册,请联系所在机构管理员</string>
    <string name="wx_login_input_code">请输入验证码</string>
    <string name="wx_user_registered">手机号%1$s已经注册,医生姓名为%2$s请输入验证码绑定当前微信</string>
    <string name="identify_resend_identify_code">重新发送</string>
    <string name="welcome_user_login_tip_1">您身边的慢病管理专家</string>
    <string name="tab_menu_personal_info">我的资料</string>
    <string name="tab_menu_personal_qr_code">我的识别码</string>
    <string name="tab_menu_personal_consultation">会诊状态</string>
    <string name="tab_menu_personal_assistant">我的助手</string>
    <string name="tab_menu_personal_doctor">我的上下级医生</string>
    <string name="tab_menu_personal_consultation_status">出诊时间</string>
    <string name="tab_menu_personal_price">收费标准</string>
    <string name="tab_menu_personal_inner_doctor">未来医生</string>
    <string name="tab_menu_personal_outer_doctor">未来医生-外科</string>
    <string name="tab_menu_personal_setting">设置</string>
    <string name="tab_menu_hospital_introduction_setting">医院简介</string>
    <string name="main_tab_patient">患者</string>
    <string name="main_tab_order">预约</string>
    <string name="main_tab_msg">消息</string>
    <string name="main_tab_mine">我的</string>
    <string name="search_home_tip">请输入手机号或姓名</string>
    <string name="consultation_half_day">12小时会诊</string>
    <string name="consultation_one_day">24小时会诊</string>
    <string name="consultation_stop">暂不接诊</string>
    <string name="home_patient_list">我的患者</string>
    <string name="consultation_list">我的会诊</string>
    <string name="home_doctor_notice">消息</string>
    <string name="double_click_to_exit">再按一次返回键退出心之力</string>
    <string name="doctor_notice_invalid">消息已失效</string>
    <string name="tab_doctor_not_have_assistant">我独立管理</string>
    <string name="tab_doctor_higher_level">我是上级医生</string>
    <string name="tab_doctor_lower_level">我是下级医生</string>
    <string name="tab_doctor_adviser_level">我是顾问医生</string>
    <string name="tab_doctor_appointment_patient">我的预约患者</string>
    <string name="home_sub_menu_manager">管理</string>
    <string name="home_sub_menu_filter">筛选</string>
    <string name="home_sub_menu_search">搜索</string>
    <string name="home_sub_menu_selected_all">全选</string>
    <string name="home_bar_organ_patient">机构患者列表</string>
    <string name="home_bar_voice_video_patient">视频语音患者</string>
    <string name="action_rescind_contract">解约</string>
    <string name="action_notice">通知</string>
    <string name="action_level">级别</string>
    <string name="action_time">时长</string>
    <string name="tab_video_ask">网上问诊</string>
    <string name="tab_video_history">历史</string>
    <string name="tab_order_ask">门诊问诊</string>
    <string name="tab_order_history">历史</string>
    <string name="tab_quota_doctor">上级医生</string>
    <string name="tab_quota_assistant">下级医生</string>
    <string name="doctor_hospital">所在医院:</string>
    <string name="action_notice_on">开启通知</string>
    <string name="action_notice_off">关闭通知</string>
    <string name="action_patient_normal">为普通患者</string>
    <string name="action_patient_vip">为VIP患者</string>
    <string name="patient_break_binding_title">确认解约?</string>
    <string name="patient_break_binding_tip">解约患者：用户%1$s，解约后您将不再为患者提供管理服务</string>
    <string name="protocol_tip">*违约详情请见</string>
    <string name="protocol_service"><u>《用户服务协议》</u></string>
    <string name="btn_cancel_break_binding">取消解约</string>
    <string name="btn_sure_break_binding">确认解约</string>
    <string name="action_setting_time">设置时长</string>
    <string name="expire_time_half_month">试用15天</string>
    <string name="expire_time_one_month">试用1个月</string>
    <string name="expire_time_three_month">试用3个月</string>
    <string name="expire_time_free_life">终身免费</string>
    <string name="expire_time_paymented">已缴费</string>
    <string name="expire_time_over_unpay">逾期未缴费</string>
    <string name="rv_consultation_count">会诊(%1$s)</string>
    <string name="home_doctor_info">%1$s医生，患者%2$d人，问题%3$d个</string>
    <string name="rv_message_count">(%1$s)</string>
    <string name="rv_problem_count">(%1$s)</string>
    <string name="rv_advice_count">(%1$s)</string>
    <string name="rv_metrics_count">(%1$s)</string>
    <string name="rv_message_count_tip">对话</string>
    <string name="rv_problem_count_tip">任务</string>
    <string name="rv_advice_count_tip">用药</string>
    <string name="rv_metrics_count_tip">指标</string>
    <string name="doctor_code_tip">医生识别码:</string>
    <string name="title_mine_cro">临床试验</string>
    <string name="title_add_doctor">添加医生</string>
    <string name="tag_cro">试验</string>
    <string name="cro_patient">受试者</string>
    <string name="mine_cro_project">我参与的实验项目</string>
    <string name="add_cro_patient">添加受试者</string>
    <string name="cro_start_tip">开始 | </string>
    <string name="cro_over">结束</string>
    <string name="status_ongoing">进行中</string>
    <string name="status_over">已结束</string>
    <string name="special_over">提前结束</string>
    <string name="patient_cro_project">%1$s患者参与的实验项目</string>
    <string name="cro_auto_over_time">自动结束时间:</string>
    <string name="tip_cro_over">*</string>
    <string name="tip_cro_over_cause">提前结束原因:</string>
    <string name="cro_over_input_limit">%1$d/100</string>
    <string name="hint_over_cause">请输入提前结束原因</string>
    <string name="consultation_time_not_work">暂不接诊</string>
    <string name="consultation_time_am_tips">温馨提示：上午可选时间范围00:00-12:00</string>
    <string name="consultation_time_pm_tips">温馨提示：下午可选时间范围12:00-18:00</string>
    <string name="consultation_time_night_tips">温馨提示：晚上可选时间范围18:00-24:00</string>
    <string name="consultation_time_pm_tip">温馨提示：下午可选时间范围12:00-24:00</string>
    <string name="consultation_time_to_time">至</string>
    <string name="consultation_time_am">上午</string>
    <string name="consultation_time_pm">下午</string>
    <string name="consultation_time_night">晚上</string>
    <string name="consultation_time_monday">MONDAY</string>
    <string name="consultation_time_tuesday">TUESDAY</string>
    <string name="consultation_time_wednesday">WEDNESDAY</string>
    <string name="consultation_time_thursday">THURSDAY</string>
    <string name="consultation_time_friday">FRIDAY</string>
    <string name="consultation_time_saturday">SATURDAY</string>
    <string name="consultation_time_sunday">SUNDAY</string>
    <string name="consultation_time_reset">时间重置</string>
    <string name="consultation_time_reset_sure">确定重置?</string>
    <string name="consultation_time_reset_all">重置后当前机构所有时间段暂不接诊</string>
    <string name="consultation_time_audio">语音视频(网上预约)</string>
    <string name="consultation_time_out_patient">门诊时间(线下问诊)</string>
    <string name="edit_info">编辑资料</string>
    <string name="qr_code_info">患者可扫码或输入识别码加我，帮您管理健康</string>
    <string name="share_wechat">分享到微信</string>
    <string name="save_album">保存到相册</string>
    <string name="slide_select_mechanism">请左右滑动选择您所在的机构</string>
    <string name="hospital_level_first">ONE_LEVEL</string>
    <string name="hospital_level_two">TWO_LEVEL</string>
    <string name="hospital_level_three">THREE_LEVEL</string>
    <string name="title_CHIEF_PHYSICIAN">CHIEF_PHYSICIAN</string>
    <string name="title_ASSOCIATE_CHIEF_PHYSICIAN">ASSOCIATE_CHIEF_PHYSICIAN</string>
    <string name="title_ATTENDING_PHYSICIAN">ATTENDING_PHYSICIAN</string>
    <string name="title_RESIDENT_PHYSICIAN">RESIDENT_PHYSICIAN</string>
    <string name="info_expertise">擅长领域</string>
    <string name="info_biography">个人简介</string>
    <string name="info_firstProfessionCompany">第一执业医院</string>
    <string name="info_experience">科研成果</string>
    <string name="info_meetingLecture">会议与讲课</string>
    <string name="info_save_success">保存成功</string>
    <string name="user_wechat_un_bind">未绑定</string>
    <string name="user_wechat_binded">已绑定</string>
    <string name="audio">语音</string>
    <string name="video">视频</string>
    <string name="order_no_response">无应答</string>
    <string name="order_accept">已接单</string>
    <string name="order_ongoing">进行中</string>
    <string name="patient_video_service_no_response">无应答</string>
    <string name="patient_video_service_accepted">已接单</string>
    <string name="patient_video_service_ongoing">进行中</string>
    <string name="order_service_time">预约时间:</string>
    <string name="order_service_time_slot">预约时段:</string>
    <string name="order_remaining_time">剩余时长:</string>
    <string name="order_used_time">使用时长:</string>
    <string name="dialed_callback">回拨</string>
    <string name="illness_cond">病情</string>
    <string name="urgent_patient">紧急</string>
    <string name="commonly_patient">不紧急</string>
    <string name="normal_patient">正常</string>
    <string name="if_junior_doctor">是否有下级医生</string>
    <string name="has_junior_doctor">有下级医生</string>
    <string name="not_junior_doctor">无下级医生</string>
    <string name="home_doctor">全部医生</string>
    <string name="hint_input_pwd">请输入密码</string>
    <string name="login">登录</string>
    <string name="hint_input_phone">请输入手机号码</string>
</resources>