<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".ui.login.activity.LoginActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:text="@string/welcome_login"
            android:layout_marginStart="@dimen/dp_16"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_24" />

        <FrameLayout
            android:layout_marginTop="@dimen/dp_30"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20">

            <com.xinzhili.doctor.view.ClearEditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/EtLoginStyle"
                android:hint="@string/hint_input_phone"
                android:maxLength="13"
                android:maxLines="1"
                android:layout_marginEnd="@dimen/dp_8"
                android:inputType="number" />

            <ImageView
                android:id="@+id/iv_account_complete"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/icon_login_input_account_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:contentDescription="@string/app_name"/>

        </FrameLayout>

        <View style="@style/Divider_hor"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginLeft="@dimen/dp_22"
            android:layout_marginRight="@dimen/dp_22"
            android:layout_marginTop="@dimen/dp_8"
            android:orientation="horizontal">

            <com.xinzhili.doctor.view.ClearEditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                style="@style/EtLoginStyle"
                android:hint="@string/hint_input_pwd"
                android:inputType="textPassword"/>

            <ImageView
                android:id="@+id/iv_show_hide_password"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/icon_login_hide_password"
                android:foreground="?attr/selectableItemBackground"
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:padding="@dimen/dp_6"
                android:layout_marginStart="@dimen/dp_8"
                android:visibility="gone"
                android:contentDescription="@string/app_name"/>

        </LinearLayout>

        <View style="@style/Divider_hor"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"/>

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_15"
            android:text="@string/forget_password"
            android:textColor="@color/c_4c73cf"
            android:textSize="@dimen/sp_13" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/btn_login_selector"
            android:enabled="false"
            android:text="@string/login"
            android:textColor="@color/c_f6f6f6"
            android:textSize="@dimen/sp_18" />

        <LinearLayout
            android:id="@+id/ll_protocal_privacl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_15"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_protocol_agreed"
                android:textColor="#858e99"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/tv_login_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_protocol_check"
                android:textColor="@color/c_4c73cf"
                android:visibility="visible"
                android:textSize="@dimen/sp_12" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>